--- a/_projects/portfolio-2.html
+++ b/_projects/portfolio-2.html
@@ -3,12 +3,4 @@ title: "Human-robot interaction and human neuroergonomic studies"
 excerpt: "Short description of portfolio item number 2 <br/><img src='/images/500x300.png'>"
 collection: projects
 ---
-
-
-Dr. Zhong's research in human-robot interaction and human neuroergonomic studies focuses on understanding and optimizing the interaction between humans and robots, considering both cognitive and physical aspects. His work on robotic impedance learning for robot-assisted physical training (Li et al., 2019) and upper limb rehabilitation robot systems (Li & Zhong, 2020) demonstrates his expertise in designing systems that adapt to human needs and capabilities. Additionally, his research on emotion recognition and generation in HRI (Zhong & Cangelosi, 2014; Zhong & Yang, 2019) and teleoperation control for bimanual robots (Wang et al., 2017) showcases his contributions to advancing the field of HRI from a neuroergonomic perspective.
-
-Dr. Zhong's unpublished work further expands on his neuroergonomic approach to HRI. In the study "A Pilot Study on the Comparison of Prefrontal Cortex Activities of Robotic Therapies on Elderly with Mild Cognitive Impairment," he investigates the effects of cognitive training and reminiscence therapy conducted by humans or socially assistive robots on prefrontal cortex activation in elderly individuals with MCI. This work builds upon the growing body of research on the use of socially assistive robots in healthcare (Feil-Seifer & Matarić, 2005) and the application of neuroergonomics in HRI (Parasuraman, 2003).
-
-Another unpublished study, "Robot Laughter: Does an appropriate laugh facilitate the robot's humor performance?" explores the role of laughter in robot humor expression, focusing on the impact of laughter type and robot laughter gesture on overall humor performance. This research contributes to the understanding of social dynamics in HRI and the importance of appropriate nonverbal cues in robot interaction (Breazeal, 2003).
-
-These works, along with seminal research in human neuroergonomics and HRI, such as the importance of considering human factors in HRI design (Goodrich & Schultz, 2007), demonstrate Dr. Zhong's commitment to advancing the field of HRI from a neuroergonomic perspective.
+This is an item in your portfolio. It can be have images or nice text. If you name the file .md, it will be parsed as markdown. If you name the file .html, it will be parsed as HTML. 
