--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -1,11 +1,15 @@
 ---
-layout: single
+layout: archive
 title: "Contact"
 permalink: /contact/
 author_profile: true
 ---
 
+Address
+======
 ST516, The Hong Kong Polytechnic University, Hung Hom, Hong Kong
 
-Email: joni.zhong@polyu.edu.hk
+Email: 
+======
+joni.zhong@polyu.edu.hk
 
